--- a/Ludum-Dare-30/.classpath
+++ b/Ludum-Dare-30/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="libs/AuchMonitoring-1.3.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/Ludum-Dare-30/libs/AuchMonitoring-1.3-Doc.zip!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
