--- a/Ludum-Dare-30/.project
+++ b/Ludum-Dare-30/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ludum-Dare-30</name>
+	<name>DoubleYou</name>
 	<comment></comment>
 	<projects>
 	</projects>
